Finished homepage layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,14 @@ section {
     z-index: 1;
 }
 
+.portfolio-item a{
+	text-decoration: none;
+}
+
+.portfolio-item a:hover div{
+	color: #999;
+}
+
 /*================================
     VIDEO SECTION STYLES
 ==================================*/
@@ -135,45 +143,45 @@ section {
     text-align: center;
 }
 
-    #home-video-sec .overlay {
-        background-color: rgba(0, 0, 0, 0.85);
-        min-height: 600px;
-        color: #fff;
-    }
-	
-    #home-video-sec h1 {
-        padding-top: 200px;
-        font-size: 100px;
-        font-weight: 900;
-        padding-bottom: 30px;
-    }
-	
-	#home-video-sec a {
-		color: #fff;
-		text-decoration: none;
-	}
-	
-	#home-video-sec a:hover,#home-video-sec a:visited,#home-video-sec a:active{
-		font-weight: bold;
-	}
+#home-video-sec .overlay {
+	background-color: rgba(0, 0, 0, 0.85);
+	min-height: 600px;
+	color: #fff;
+}
+
+#home-video-sec h1 {
+	padding-top: 200px;
+	font-size: 100px;
+	font-weight: 900;
+	padding-bottom: 30px;
+}
+
+#home-video-sec a {
+	color: #fff;
+	text-decoration: none;
+}
+
+#home-video-sec a:hover,#home-video-sec a:active{
+	color: #999;
+}
 
 #video-sec {
     color: #fff;
     text-align: center;
 }
 
-    #video-sec .overlay:before {
-        background-color: rgba(0, 0, 0, 0.85);
-        min-height: 300px;
-        color: #fff;
-    }
-	
-    #video-sec h1 {
-        padding-top: 200px;
-        font-size: 50px;
-        font-weight: 900;
-        padding-bottom: 30px;
-    }
+#video-sec .overlay:before {
+	background-color: rgba(0, 0, 0, 0.85);
+	min-height: 300px;
+	color: #fff;
+}
+
+#video-sec h1 {
+	padding-top: 200px;
+	font-size: 50px;
+	font-weight: 900;
+	padding-bottom: 30px;
+}
 /*================================
     CLIENTS SECTION STYLES
 ==================================*/
