Finished Explore page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ section {
 }
 
 #home-explore{
-	background: url(../img/home.jpg) no-repeat center center; /*Full Witdth background image*/
+	background: url(../img/exploreBg.jpg) no-repeat center center; /*Full Witdth background image*/
 }
 
 /*STYLE OF BACKGROUND IMAGE*/
