Finished About Us Page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ section {
 }
 
 #home-about{
-	background: url(../img/home.jpg) no-repeat center center; /*Full Witdth background image*/
+	background: url(../img/aboutBg.jpg) no-repeat center center; /*Full Witdth background image*/
 }
 
 #home-together{
