Finished work page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ section {
 }
 
 #home-work{
-	background: url(../img/home.jpg) no-repeat center center; /*Full Witdth background image*/
+	background: url(../img/skyline.jpg) no-repeat center center; /*Full Witdth background image*/
 }
 
 #home-about{
