Added all images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ section {
 }
 
 #home-together{
-	background: url(../img/home.jpg) no-repeat center center; /*Full Witdth background image*/
+	background: url(../img/people.jpg) no-repeat center center; /*Full Witdth background image*/
 }
 
 #home-explore{
